--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@socket.tech/plugin": "^1.3.7",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.4"
+    "recharts": "^2.12.7",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "hardhat": "^2.22.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
+    "typescript": "^5"
   }
 }
